tests/NormalTests/paczka1/fuzzy1/15604972.err
Error in line 5: pdon1gJdwT A215 59,7
Error in line 9: U8v0Q89ROl9 S85 17,7
Error in line 26: KmI S85 83,3
Error in line 23: pdon1gJdwT S963 77,9
Error in line 25: vnv5SEahkF S963 31,0
Error in line 35: vnv5SEahkF A264 78,1
